Added second visualization

--- a/alpharatings.html
+++ b/alpharatings.html
@@ -85,8 +85,22 @@
                           <div id="comp-ividcu8kinlineContent-gridWrapper" data-mesh-internal="true">
                             <div id="comp-ividcu8kinlineContent-gridContainer" data-mesh-internal="true">
                               </br>
+                              <div data-packed="true" style="width: 712px; pointer-events: none;" class="txtNew" id="comp-ividcu8o">
+                                <h2 class="font_6" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">Alpha: Movies Ratings</span></h2>
+                                </br>
+                                <h2 class="font_12" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">
+                                    <a href="betaratings.html">Click here for Beta Prototype </a>
+                                </h2>
+                                <h2 class="font_12" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">
+                                    <a href="ratings.html">Click here for Final Visualization </a>
+                                </h2>
+
+                              </div>
+
 
                               <div data-packed="true" style="width: 433px; pointer-events: none;" class="txtNew" id="comp-iw0qom55">
+                                </br>
+                                </br> </br> </br> </br> </br> </br>
                                 <h6 class="font_6"><span style="letter-spacing:0.05em;">
                                     <strong>Genre - Gross - Imdb</strong><br />
                                   </span></h6>
@@ -94,6 +108,8 @@
                               </div>
 
                               <div data-packed="true" style="width: 433px;" class="txtNew" id="comp-jtfr9hek">
+                              </br>
+                              </br> </br> </br> </br> </br> </br>
                                 <h6 class="font_6"><span style="letter-spacing:0.05em;">
                                     <strong>Rating - Gross - Imdb</strong><br />
                                   </span></h6>
