--- a/index.html
+++ b/index.html
@@ -161,7 +161,9 @@
                                     Continuous Legend: <u><a href="http://bl.ocks.org/syntagmatic/e8ccca52559796be775553b467593a9f">bl.ocks</a></u> </br>
                                     Zoomable Map Tiles: <u><a href="https://observablehq.com/@d3/zoomable-map-tiles">observable</a></u> </br>
                                     Zoomable sunburst: <u><a href="https://observablehq.com/@d3/zoomable-sunburst">observable</a></u> </br>
-                                    Coming soon...
+                                    Drawing axis in d3.js: <u><a href="https://www.d3-graph-gallery.com/graph/custom_axis.html">d3 graph gallery</a></u> </br>
+                                    Grid lines: <u><a href="https://bl.ocks.org/d3noob/c506ac45617cf9ed39337f99f8511218">blocks</a></u> </br>
+
                                   </h6>
                                 </div>
                               </div>
