--- a/ratingschart.html
+++ b/ratingschart.html
@@ -16,6 +16,11 @@
   </script>
   <svg width="960" height="500" id="raitings">
     </svg>
+    <figcaption>
+      Source: <a href="https://www.kaggle.com/san-francisco/sf-film-locations-in-san-francisco">SF Film Locations in San Francisco,
+      <a href="https://data.world/data-society/imdb-5000-movie-dataset">IMDB 5000 Movie Dataset </br>
+      Made by Elizaveta Ozerova
+    </figcaption>
 
 
 </body>
